basic-app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #         - matchExpressions:
      #             - key: cloud.google.com/gke-nodepool
      #               operator: In
      #               values:
      #                 - base-pool
      containers:
      - name: k8s-demo
        image: wardviaene/k8s-demo
        ports:
        - name: nodejs-port
          containerPort: 3000
        volumeMounts:
        - name: cred-volume
          mountPath: /etc/creds
          readOnly: true
        # livenessProbe:
        #   httpGet:
        #     path: /
        #     port: 3000
        #   initialDelaySeconds: 15
        #   timeoutSeconds: 30
        # readinessProbe:
        #   httpGet:
        #     path: /
        #     port: 3000
        #   initialDelaySeconds: 15
        #   timeoutSeconds: 30
        # resources:
        #   requests:
        #     cpu: 10m
        #     memory: 0.2Gi
        #   limits:
        #     cpu: 100m
        #     memory: 1Gi
      volumes:
      - name: cred-volume
        secret: 
          secretName: helloworld-secrets
