basic-app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
spec:
  type: ClusterIP
  selector:
    app: helloworld
  ports:
  - name: http
    protocol: TCP
    port: 3000
    targetPort: 3000
